<resources>
    <string name="app_name">Midterm_DORIAN_LORIS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_api_call">API CALL</string>
    <string name="FormActivity">Form</string>
    <string name="userId">User ID</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="AddData">Add data</string>
    <string name="button_remove">Remove item</string>

</resources>